Users can choose whether to automatically send messages. If so, the messages will be automatically sent. If not, the speech recognition results will be entered in the message sending column

--- a/src/main/resources/assets/mcmti/lang/en_us.json
+++ b/src/main/resources/assets/mcmti/lang/en_us.json
@@ -2,12 +2,21 @@
     "mcmti.midnightconfig.title": "§bMicrophone Text Input Mod Configuration",
     "mcmti.midnightconfig.labelConfig": "§eConfiguration",
     "mcmti.midnightconfig.acousticModelPath": "absolute path of acoustic model",
+    "mcmti.midnightconfig.acousticModelPath.tooltip": "§eThe absolute path of the acoustic model. Please download the acoustic model from VOSK Models",
     "mcmti.midnightconfig.cacheSize": "audio cache size (unit: Byte)",
+    "mcmti.midnightconfig.cacheSize.tooltip": "§eThe size of the audio cache. The larger the value, the more memory is occupied, and the more accurate the recognition result is.",
     "mcmti.midnightconfig.sampleRate": "audio sample rate (unit: Hz)",
+    "mcmti.midnightconfig.sampleRate.tooltip": "§eThe sample rate of the audio. Please confirm if your microphone supports this sample rate.",
+    "mcmti.midnightconfig.autoSend": "automatic message sending",
+    "mcmti.midnightconfig.autoSend.tooltip": "§eAutomatically send the recognized text to the chat box. If this option is disabled, you need to manually send the recognized message.",
     "mcmti.midnightconfig.prefix": "prefix of the recognized text",
+    "mcmti.midnightconfig.prefix.tooltip": "§eThe prefix of the recognized text. If the prefix is not empty, the recognized text will be sent to the chat box with the prefix.",
     "mcmti.midnightconfig.encoding_repair": "error encoding repair (beta)",
+    "mcmti.midnightconfig.encoding_repair.tooltip": "§eWarning: This option is still in the beta stage.",
     "mcmti.midnightconfig.srcEncoding": "source encoding (beta)",
+    "mcmti.midnightconfig.srcEncoding.tooltip": "§eWarning: This option is still in the beta stage.",
     "mcmti.midnightconfig.dstEncoding": "destination encoding (beta)",
+    "mcmti.midnightconfig.dstEncoding.tooltip": "§eWarning: This option is still in the beta stage.",
     "mcmti.midnightconfig.about": "§eAbout",
     "mcmti.midnightconfig.mod_name": "Mod Name:                    Fabric Microphone Text Input Mod",
     "mcmti.midnightconfig.license":  "License:                                            §aMIT",
