--- a/src/main/resources/assets/mcmti/lang/zh_cn.json
+++ b/src/main/resources/assets/mcmti/lang/zh_cn.json
@@ -2,12 +2,21 @@
     "mcmti.midnightconfig.title": "§bFabric麦克风语音识别聊天Mod设置",
     "mcmti.midnightconfig.labelConfig": "§e配置项目",
     "mcmti.midnightconfig.acousticModelPath": "声学模型的绝对路径",
+    "mcmti.midnightconfig.acousticModelPath.tooltip": "§e声学模型的绝对路径，请从VOSK Models官网下载声学模型",
     "mcmti.midnightconfig.cacheSize": "录制音频缓存大小（单位Byte）",
+    "mcmti.midnightconfig.cacheSize.tooltip": "§e模组运行时录制音频缓存大小（单位Byte），默认为1024",
     "mcmti.midnightconfig.sampleRate": "录制音频的采样率（单位Hz）",
+    "mcmti.midnightconfig.sampleRate.tooltip": "§e模组运行时麦克风录制音频的采样率（单位Hz），默认为16000，请检查您的计算机麦克风设置，选择其所支持的采样率",
+    "mcmti.midnightconfig.autoSend": "消息自动发送",
+    "mcmti.midnightconfig.autoSend.tooltip": "§e是否自动发送识别的文本，如果为是，则会自动发送语音识别的文本，如果为否，则会在聊天栏显示识别的文本",
     "mcmti.midnightconfig.prefix": "识别文本的前缀",
+    "mcmti.midnightconfig.prefix.tooltip": "§e识别文本的前缀，如果您不想在识别的文本前加前缀，请将其设置为空",
     "mcmti.midnightconfig.encoding_repair": "是否修复编码（测试版）",
+    "mcmti.midnightconfig.encoding_repair.tooltip": "§e是否修复编码，实验性功能，可能会导致程序崩溃，谨慎使用",
     "mcmti.midnightconfig.srcEncoding": "源编码     （测试版）",
+    "mcmti.midnightconfig.srcEncoding.tooltip": "§e尝试解析乱码可能的源编码，实验性功能，可能会导致程序崩溃，谨慎使用",
     "mcmti.midnightconfig.dstEncoding": "目标编码    （测试版）",
+    "mcmti.midnightconfig.dstEncoding.tooltip": "§e尝试解析乱码可能的目标编码，也就是重新解码的编码，实验性功能，可能会导致程序崩溃，谨慎使用",
     "mcmti.midnightconfig.about": "§e关于",
     "mcmti.midnightconfig.mod_name": "模组名称:                         Fabric 麦克风语音识别文字消息自动发送Mod",
     "mcmti.midnightconfig.license": "开源协议:                                          §aMIT",
